--- a/src/components/CompanyData/CompanyData.css
+++ b/src/components/CompanyData/CompanyData.css
@@ -57,3 +57,9 @@
   padding: 2% 1.5%;
   text-align: center;
 }
+
+.company-data .loading {
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 5% 0;
+  }
