--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,15 @@
     display: flex;
     flex-direction: row;
 }
+
+.third-column {
+    position: fixed;
+    margin-left: 72%;
+    margin-top: 2%;
+    width: 26%;
+
+    /* to consume 100% height */
+    display: flex;
+    flex-direction: column;
+    height: 94%;
+}
